--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="container">
         <header>
-            <div class="subtitle">新佐が選ぶ</div>
+            <div class="subtitle">私が選ぶ</div>
             <h1 class="main-title">全国和菓子お土産ランキング</h1>
             <div class="title-decoration"></div>
         </header>
